# GPT-Swarm

./: .gitignore  OpenAIWrapper.ipynb  OpenAIWrapper.py  README.md  auto-gptswarm.py  gptswarm.py  pyproject.toml
.grit/: grit.yaml
aux/: chat.py  file_utils.py  logger.py  quality_check.py  settings.py  task_manager.py
prompts/: prompts.py
results/: c5b24e24b90e48ca9efa13bfa98baacb_result_20231127-101427.json  e310001d72a04e468c863a545a7d3aab_result_20231127-113943.json
results/old/: 08ace5ac1dc0488499eb57d9c48c55be_result_20231126-150020.json  0a9bfcf9d4f3462a8a12c22aff53a86a_result_20231126-150020.json  1860a6475b0b4b2394203277507339d6_result_20231126-150020.json  3dabe71706d9490aa6eb6e0b6a65320a_result_20231126-150020.json  4bed484b1d8045aba64e25a9880cdf50_result_20231126-150020.json  583fc51527ff4470a72a6e54b5b5ad5c_result_20231126-204116.json  7393bc84c1a7400a8b53833ad5c31472_result_20231126-150020.json  7de97922afe84a8d85cd31f7ce16ea03_result_20231126-150020.json  7f18b9546ddc4944b1204ab0ed736ab8_result_20231126-150020.json  8b592e93e8c4410381acae4c097c2d91_result_20231126-150020.json  95ebd7a645354febad005414c7ba729d_result_20231126-150020.json  a5abe50682064e698ab5feefcb353e41_result_20231126-150020.json  a96cfa9090d1459981d5060e5928cbfd_result_20231126-150020.json  c15137571c7f482191bd8eaa2d123720_result_20231126-150020.json  cd97ead9012844b9bfaff15d46840cc6_result_20231126-150020.json  cea639bfbecd42e98112b71227a5ff37_result_20231126-185319.json  task_0_1700897706.txt  task_0_1700898362.txt  task_0_1700975505.txt  task_0_1700979855.txt  (+94 more)
